# OpenShell

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  mise.toml
.agents/skills/update-docs/: SKILL.md
.claude/agents/: arch-doc-writer.md
.github/workflows/: docker-build.yml  e2e-test.yml  macos-e2e.yml  release-auto-tag.yml  release-canary.yml
.opencode/agents/: arch-doc-writer.md
architecture/: README.md  build-containers.md  gateway-security.md  gateway-single-node.md  gateway.md  sandbox-connect.md  sandbox-custom-containers.md  sandbox-providers.md  system-architecture.md
container-bridge/: Package.swift
container-bridge/Sources/: ContainerBridgeProvider.swift  Main.swift
crates/openshell-bootstrap/: Cargo.toml
crates/openshell-bootstrap/src/: build.rs  constants.rs  container_runtime.rs  docker.rs  errors.rs  image.rs  lib.rs  metadata.rs  pki.rs  push.rs  runtime_apple.rs
crates/openshell-cli/: Cargo.toml
crates/openshell-core/: build.rs
crates/openshell-server/: Cargo.toml
crates/openshell-tui/: Cargo.toml
deploy/container/: Containerfile.gateway
docs/: CONTRIBUTING.md
docs/about/: architecture.md
docs/get-started/: quickstart.md
docs/reference/: support-matrix.md
docs/sandboxes/: index.md  manage-gateways.md  manage-sandboxes.md
docs/tutorials/: first-network-policy.md
examples/: gateway-deploy-connect.md
examples/bring-your-own-container/: README.md
examples/private-ip-routing/: Dockerfile  README.md
proto/: container_bridge.proto
tasks/: apple.toml  publish.toml  python.toml
(+30 files in other folders)
